# rules_python_gazelle

./: .bazelrc  BUILD  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  go.mod  go.sum  workspace_snippet.sh
.github/workflows/: ci.yaml  workspace_snippet.sh
gazelle/: BUILD.bazel  configure.go  def.bzl  deps.bzl  fix.go  generate.go  kinds.go  language.go  parse.py  parser.go  python_test.go  resolve.go  target.go
gazelle/manifest/: BUILD.bazel  defs.bzl  manifest_test.go
gazelle/manifest/generate/: BUILD.bazel  generate.go
gazelle/manifest/hasher/: BUILD.bazel
gazelle/manifest/test/: BUILD.bazel  test.go
gazelle/modules_mapping/: BUILD.bazel  def.bzl  generator.py  test_generator.py
gazelle/pythonconfig/: BUILD.bazel  pythonconfig.go
gazelle/testdata/django_test/: BUILD.out  __test__.py  gazelle_python.yaml  test_django.py
gazelle/testdata/py_module/: BUILD.in  BUILD.out  __main__.py  __test__.py
gazelle/testdata/pycheck/: BUILD.in  BUILD.out
gazelle/testdata/simple/: BUILD.out  __main__.py
manifest/: BUILD.bazel  manifest_test.go
manifest/generate/: BUILD.bazel  generate.go
manifest/hasher/: BUILD.bazel
modules_mapping/: generator.py
patches/: go-tree-sitter.diff
python/: BUILD.bazel  colors.go  configure.go  file_parser.go  file_parser_test.go  fix.go  generate.go  kinds.go  parser.go  resolve.go  target.go
pythonconfig/: BUILD.bazel  pythonconfig.go
