module(
    name = "com_github_benchsci_rules_python_gazelle",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "bazel_skylib", version = "1.6.1")
bazel_dep(name = "rules_python", version = "0.31.0")
bazel_dep(name = "rules_go", version = "0.50.1", repo_name = "io_bazel_rules_go")
bazel_dep(name = "gazelle", version = "0.40.0", repo_name = "bazel_gazelle")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "com_github_smacker_go_tree_sitter",
    integrity = "sha256-ydsF+Evl9CwcTac21N4CV1Nje8GUpXU35YXDfqFliV0=",
    patch_args = ["-p1"],
    patches = [
        "//patches:go-tree-sitter.diff",
    ],
    strip_prefix = "go-tree-sitter-dd81d9e9be82a8cac96ed1d50c7389c5f1997c02",
    urls = ["https://github.com/smacker/go-tree-sitter/archive/dd81d9e9be82a8cac96ed1d50c7389c5f1997c02.tar.gz"],
)

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_bazelbuild_buildtools",
    "com_github_bmatcuk_doublestar_v4",
    "com_github_emirpasic_gods",
    "com_github_ghodss_yaml",
    "com_github_stretchr_testify",
    "in_gopkg_yaml_v2",
    "org_golang_x_sync",
)

python_stdlib_list = use_extension("//python:extensions.bzl", "python_stdlib_list")
use_repo(
    python_stdlib_list,
    "python_stdlib_list_3_10",
    "python_stdlib_list_3_11",
    "python_stdlib_list_3_12",
    "python_stdlib_list_3_8",
    "python_stdlib_list_3_9",
)

go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.23.3")
