module(
    name = "com_github_benchsci_rules_python_gazelle",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_python", version = "0.31.0")
bazel_dep(name = "rules_go", version = "0.60.0", repo_name = "io_bazel_rules_go")
bazel_dep(name = "gazelle", version = "0.47.0", repo_name = "bazel_gazelle")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_bazelbuild_buildtools",
    "com_github_bmatcuk_doublestar_v4",
    "com_github_emirpasic_gods",
    "com_github_ghodss_yaml",
    "com_github_smacker_go_tree_sitter",
    "com_github_stretchr_testify",
    "in_gopkg_yaml_v2",
    "org_golang_x_sync",
)

python_stdlib_list = use_extension("//python:extensions.bzl", "python_stdlib_list")
use_repo(
    python_stdlib_list,
    "python_stdlib_list_3_10",
    "python_stdlib_list_3_11",
    "python_stdlib_list_3_12",
    "python_stdlib_list_3_8",
    "python_stdlib_list_3_9",
)

go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.23.3")
