load("@io_bazel_rules_go//go:def.bzl", "go_test")

TEST_DEPS = [
    "@bazel_gazelle//testtools:go_default_library",
    "@com_github_emirpasic_gods//lists/singlylinkedlist",
    "@com_github_ghodss_yaml//:yaml",
    "@io_bazel_rules_go//go/tools/bazel:go_default_library",
]

TEST_DATA = [
    "//python:gazelle_binary",
]

[
    go_test(
        name = "test_{}".format(t),
        srcs = ["python_test.go"],
        data = TEST_DATA + glob(["testdata/{}/**".format(t)]),
        deps = TEST_DEPS,
    )
    for t in [
        "simple",
        "django_test",
    ]
]
