load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "manifest",
    srcs = ["manifest.go"],
    importpath = "github.com/benchsci/rules_python_gazelle/gazelle/manifest",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_emirpasic_gods//sets/treeset:go_default_library",
        "@in_gopkg_yaml_v2//:go_default_library",
    ],
)

go_test(
    name = "manifest_test",
    srcs = ["manifest_test.go"],
    data = glob(["testdata/**"]),
    deps = [":manifest"],
)

filegroup(
    name = "distribution",
    srcs = glob(["**"]) + [
        "@com_github_benchsci_rules_python_gazelle//gazelle/manifest/generate:distribution",
        "@com_github_benchsci_rules_python_gazelle//gazelle/manifest/hasher:distribution",
        "@com_github_benchsci_rules_python_gazelle//gazelle/manifest/test:distribution",
    ],
    visibility = ["//:__pkg__"],
)
