load("@rules_python//python:defs.bzl", "py_binary", "py_test")

py_binary(
    name = "generator",
    srcs = ["generator.py"],
    visibility = ["//visibility:public"],
)

py_test(
    name = "test_generator",
    srcs = ["test_generator.py"],
    main = "test_generator.py",
    data = glob(["testdata/**"])
)
