load("@rules_python//python:defs.bzl", "py_binary", "py_test")

py_binary(
    name = "generator",
    srcs = ["generator.py"],
    main = "generator.py",
    visibility = ["//visibility:public"],
)

py_test(
    name = "test_generator",
    srcs = ["test_generator.py"],
    data = glob(["testdata/**"]),
    main = "test_generator.py",
)
