load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@com_github_benchsci_rules_python_gazelle//gazelle/manifest:defs.bzl", "sources_hash")

go_library(
    name = "generate_lib",
    srcs = ["generate.go"],
    importpath = "github.com/benchsci/rules_python_gazelle/gazelle/manifest/generate",
    visibility = ["//visibility:public"],
    deps = ["//gazelle/manifest"],
)

sources_hash(
    name = "generate_lib_sources_hash",
    go_library = ":generate_lib",
    visibility = ["//visibility:public"],
)

go_binary(
    name = "generate",
    embed = [":generate_lib"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "distribution",
    srcs = glob(["**"]),
    visibility = ["@com_github_benchsci_rules_python_gazelle//gazelle/manifest:__pkg__"],
)
